# opencvsharp

src/OpenCvSharp/: OpenCvSharp.csproj
src/OpenCvSharp.Blob/: OpenCvSharp.Blob.csproj
src/OpenCvSharp.Extensions/: OpenCvSharp.Extensions.csproj
src/OpenCvSharpExtern/: CMakeLists.txt  include_opencv.h  my_types.h  std_vector.h
